<resources>
    <string name="app_name">MatchaApp</string>
    <string name="timeMngButton_name">일정 관리</string>
    <string name="menuMngButton_name">판매 메뉴 관리</string>
    <string name="foodMapButton_name">푸드트럭 지도</string>
    <string name="festInfoButton_name">행사 정보</string>
    <string name="title_activity_food_truck_map">푸드트럭 지도</string>
    <string name="title_activity_owner_tite_table">일정</string>
    <string name="title_activity_fest_info">행사 정보</string>
    <string name="btn_foodtruck_view_time_location">영업시간/위치</string>
    <string name="btn_foodtruck_view_menu">메뉴</string>
    <string name="btn_foodtruck_view_review">후기 보기/ 남기기</string>
    <string name="btn_user_myinfo_update">수정</string>
    <string name="btn_user_myinfo_logout">로그아웃</string>
    <string name="btn_user_myinfo_bookmark">찜한 트럭</string>
    <string name="btn_user_myinfo_coupon">쿠폰</string>
    <string name="mng_coupon">쿠폰 제작 및 발송</string>
    <string name="mynotice">개인공지사항</string>
    <string name="btn_user_myinfo_review">리뷰 관리</string>
    <string name="btn_user_myinfo_event_notice">이벤트 및 공지사항</string>
    <string name="btn_user_myinfo_setting">환경설정</string>
    <string name="radio_user_myinfo_update_male">남</string>
    <string name="radio_user_myinfo_update_female">여</string>
    <string name="btn_user_myinfo_update_delete">회원 탈퇴</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="map_not_ready">지도가 아직 준비되지 않았습니다.</string>
    <string name="title_activity_food_truck_view">FoodTruckView</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>


</resources>
