<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_owner_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout_owner_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".owner.OwnerMainActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/web_gray"
            tools:context=".owner.OwnerMainActivity">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_button_height"
                android:text="@string/timeMngButton_name"
                android:background="@drawable/border_rectangle"
                android:textStyle="bold"
                android:textColor="@color/material_Grey700"
                android:textSize="20sp"
                android:id="@+id/timeMngButton"
                android:layout_marginTop="@dimen/main_button_margin"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_button_height"
                android:text="@string/menuMngButton_name"
                android:background="@drawable/border_rectangle"
                android:textStyle="bold"
                android:textColor="@color/material_Grey700"
                android:textSize="20sp"
                android:id="@+id/foodMenuMngBtn"
                android:layout_marginTop="@dimen/main_button_margin"
                android:layout_below="@+id/timeMngButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_button_height"
                android:text="@string/foodMapButton_name"
                android:background="@drawable/border_rectangle"
                android:textStyle="bold"
                android:textColor="@color/material_Grey700"
                android:textSize="20sp"
                android:id="@+id/foodMapButton"
                android:layout_marginTop="@dimen/main_button_margin"
                android:layout_below="@+id/foodMenuMngBtn"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_button_height"
                android:text="@string/festInfoButton_name"
                android:background="@drawable/border_rectangle"
                android:textStyle="bold"
                android:textColor="@color/material_Grey700"
                android:textSize="20sp"
                android:id="@+id/festInfoButton"
                android:layout_marginTop="@dimen/main_button_margin"
                android:layout_below="@+id/foodMapButton"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>
        </RelativeLayout>

        <include layout="@layout/custom_info_drawer"/>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>